--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,41 +1,37 @@
+<!-- ! not used now -->
 <resources>
     <string name="app_name">FindTheKing</string>
-    <string-array name="spinner_items1">
-        <item>Donlon</item>
-        <item>Enchai</item>
-        <item>Jebing</item>
-        <item>Sapier</item>
-        <item>Lerbin</item>
-        <item>Pingasor</item>
-    </string-array>
-
-    <string-array name="spinner_items2">
-        <item>Donlon</item>
-        <item>Enchai</item>
-        <item>Jebing</item>
-        <item>Sapier</item>
-        <item>Lerbin</item>
-        <item>Pingasor</item>
-    </string-array>
-
-    <string-array name="spinner_items3">
-        <item>Donlon</item>
-        <item>Enchai</item>
-        <item>Jebing</item>
-        <item>Sapier</item>
-        <item>Lerbin</item>
-        <item>Pingasor</item>
-    </string-array>
-
-    <string-array name="spinner_items4">
-        <item>Donlon</item>
-        <item>Enchai</item>
-        <item>Jebing</item>
-        <item>Sapier</item>
-        <item>Lerbin</item>
-        <item>Pingasor</item>
-    </string-array>
-    <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+
+    <string-array name="planet_items1">
+        <item>API not working</item>
+        <item>API not working</item>
+        <item>API not working</item>
+
+    </string-array>
+
+    <string-array name="planet_items2">
+        <item>FAiled to fetch</item>
+        <item>FAiled to fetch</item>
+        <item>FAiled to fetch</item>
+    </string-array>
+
+    <string-array name="planet_items3">
+        <item>Plaent list</item>
+        <item>Plaent list</item>
+        <item>Plaent list</item>
+        <item>Plaent list</item>
+        <item>Plaent list</item>
+    </string-array>
+
+    <string-array name="planet_items4">
+        <item>Donlon</item>
+        <item>Enchai</item>
+        <item>Jebing</item>
+        <item>Sapier</item>
+        <item>Lerbin</item>
+        <item>Pingasor</item>
+    </string-array>
+<!--    &lt;!&ndash; TODO: Remove or change this placeholder text &ndash;&gt;-->
 </resources>
 
